Add new info to docker t&t